[package]
name = "spl-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "=1.17.0"
ahash = "=0.8.6"
anchor-spl = "0.26.0"
